--- a/package.json
+++ b/package.json
@@ -43,11 +43,15 @@
     "eslint": "^3.1.1",
     "eslint-config-ryansobol": "^7.7.0",
     "foreman": "^1.4.1",
+    "hump": "0.0.4",
     "mocha": "^2.5.3",
     "nodemon": "^1.10.0",
     "supertest": "^1.2.0"
   },
   "engines": {
     "node": "7.4.0"
+  },
+  "directories": {
+    "test": "test"
   }
 }
